--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,5 +1,7 @@
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Oswald:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,700);
+
 
 #menu-0 .mbr-brand__name {
   font-size: 16px;
@@ -9,6 +11,10 @@
 }
 #menu-0 .mbr-navbar__hamburger {
   color: #ffffff;
+}
+#header4-3 H1 {
+  text-align: center;
+  font-family: 'Raleway', sans-serif;
 }
 #msg-box4-k .mbr-header__text {
   color: #ffffff;
