--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -68,6 +68,24 @@
 #menu-9 .mbr-navbar__hamburger {
   color: #ffffff;
 }
+#msg-box5-o .mbr-header__text {
+  color: #ffffff;
+}
+#msg-box5-o .mbr-header__subtext {
+  color: #ffffff;
+}
+#msg-box5-o .mbr-article {
+  color: #ffffff;
+}
+#msg-box4-p .mbr-header__text {
+  color: #000000;
+}
+#msg-box4-p .mbr-header__subtext {
+  color: #ffffff;
+}
+#msg-box4-p .mbr-article {
+  color: #000000;
+}
 #contacts1-a P {
   color: #ffffff;
 }
