--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -68,6 +68,15 @@
 #menu-9 .mbr-navbar__hamburger {
   color: #ffffff;
 }
+#content4-g P {
+  text-align: center;
+}
+#content4-q .mbr-section__col .mbr-header__text {
+  text-align: center;
+}
+#content4-q P {
+  text-align: center;
+}
 #msg-box5-o .mbr-header__text {
   color: #ffffff;
 }
