--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3,13 +3,24 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,700);
 
 
-#menu-0 .mbr-brand__name {
-  font-size: 16px;
+#dropdown-menu-2btn-r .hide-buttons [data-button] {
+  display: none !important;
 }
-#menu-0.mbr-navbar--stuck .mbr-navbar__section {
-  background: #2969b0;
+#dropdown-menu-2btn-r .nav .link,
+#dropdown-menu-2btn-r .dropdown-item {
+  font-size: 1em;
+  color: #ffffff;
 }
-#menu-0 .mbr-navbar__hamburger {
+#dropdown-menu-2btn-r .navbar,
+#dropdown-menu-2btn-r .dropdown-menu {
+  background: #306093;
+}
+#dropdown-menu-2btn-r .dropdown-menu .dropdown-toggle[aria-expanded="true"],
+#dropdown-menu-2btn-r .dropdown-menu a:hover,
+#dropdown-menu-2btn-r .dropdown-menu a:focus {
+  background: #2b5684;
+}
+#dropdown-menu-2btn-r .navbar-toggler {
   color: #ffffff;
 }
 #header4-3 H1 {
@@ -59,15 +70,6 @@
 #msg-box5-f .mbr-article {
   color: #ffffff;
 }
-#menu-9 .mbr-brand__name {
-  font-size: 16px;
-}
-#menu-9.mbr-navbar--stuck .mbr-navbar__section {
-  background: #2969b0;
-}
-#menu-9 .mbr-navbar__hamburger {
-  color: #ffffff;
-}
 #content4-g P {
   text-align: center;
 }
@@ -96,5 +98,25 @@
   color: #000000;
 }
 #contacts1-a P {
+  color: #ffffff;
+}
+#dropdown-menu-2btn-r .hide-buttons [data-button] {
+  display: none !important;
+}
+#dropdown-menu-2btn-r .nav .link,
+#dropdown-menu-2btn-r .dropdown-item {
+  font-size: 1em;
+  color: #ffffff;
+}
+#dropdown-menu-2btn-r .navbar,
+#dropdown-menu-2btn-r .dropdown-menu {
+  background: #306093;
+}
+#dropdown-menu-2btn-r .dropdown-menu .dropdown-toggle[aria-expanded="true"],
+#dropdown-menu-2btn-r .dropdown-menu a:hover,
+#dropdown-menu-2btn-r .dropdown-menu a:focus {
+  background: #2b5684;
+}
+#dropdown-menu-2btn-r .navbar-toggler {
   color: #ffffff;
 }
